--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@types/three": "^0.149.0",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
+    "framer-motion": "^10.10.0",
     "next": "13.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-intersection-observer": "^9.4.3",
     "three": "^0.150.1"
   },
   "devDependencies": {
