--- a/package.json
+++ b/package.json
@@ -9,8 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
     "@heroicons/react": "^2.0.17",
     "@material-tailwind/react": "^1.4.2",
+    "@mui/icons-material": "^5.11.16",
+    "@mui/material": "^5.11.16",
     "@react-three/drei": "^9.57.3",
     "@react-three/fiber": "^8.12.0",
     "@types/three": "^0.149.0",
@@ -21,7 +25,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-intersection-observer": "^9.4.3",
-    "three": "^0.150.1"
+    "three": "^0.150.1",
+    "valtio": "^1.10.4"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
