--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
+    "@heroicons/react": "^2.0.17",
     "@mui/material": "^5.11.16",
     "@react-three/drei": "^9.57.3",
     "@react-three/fiber": "^8.12.0",
