--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-intersection-observer": "^9.4.3",
+    "swiper": "^9.2.0",
     "three": "^0.150.1"
   },
   "devDependencies": {
