--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "next-themes": "^0.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.8.0",
     "react-intersection-observer": "^9.4.3",
     "swiper": "^9.2.0",
     "three": "^0.150.1"
