--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-github-calendar": "^4.0.0",
     "react-icons": "^4.8.0",
     "react-intersection-observer": "^9.4.3",
+    "react-scroll": "^1.8.9",
     "swiper": "^9.2.0",
     "three": "^0.150.1"
   },
